# gefast

./: .gitignore  CMakeLists.txt  Makefile  README.md  convert_scoring.py  default.conf  example.conf  main.cpp
examples/: README.md  parts.txt  reads_pt1.fastq
examples/af/: af.conf  internal.txt  otus.txt  seeds.fasta  statistics.txt
examples/as/: as.conf
examples/cons/: cons.conf  otus.txt
examples/derep/: dereplicated.fasta
examples/examples/: README.md  reads.fasta  reads.fastq  reads_pt2.fastq
examples/lev/: internal.txt  lev.conf  otus.txt  statistics.txt
examples/qas/: internal.txt  qas.conf  seeds.fasta  statistics.txt
examples/qlev/: otus.txt  statistics.txt
include/: AmpliconCollections.hpp  AmpliconStorages.hpp  AuxiliaryData.hpp  Base.hpp  Buffer.hpp  ClusterRefiners.hpp  Clusterers.hpp  Distances.hpp  Factories.hpp  FeatureBuilders.hpp  Options.hpp  OutputGenerators.hpp  Preprocessor.hpp  Preprocessors.hpp  QualityWeightedDistances.hpp  Relation.hpp  RelationSuccinct.hpp  RelationTest.hpp  Relations.hpp  SIMD.hpp  SegmentFilter.hpp  SpacePartitioning.hpp  SwarmClustering.hpp  SwarmStorages.hpp  SwarmingSegmentFilter.hpp  Swarms.hpp  Utility.hpp  Verification.hpp  VerificationGotoh.hpp  Worker.hpp
include/modes/: AlignmentFreeMode.hpp  AlignmentScoreMode.hpp  ConsistencyMode.hpp  DereplicationMode.hpp  LevenshteinMode.hpp  PreprocessingOnlyMode.hpp  QualityAlignmentScoreMode.hpp  QualityLevenshteinMode.hpp  SpaceLevenshteinMode.hpp
include/space/: Basics.hpp  FlexibleAmpliconCollection.hpp  FlexibleRelations.hpp  NumericArrays.hpp  StringArrays.hpp  SwarmRepresentations.hpp
src/: AmpliconCollections.cpp  AuxiliaryData.cpp  Base.cpp  ClusterRefiners.cpp  Clusterers.cpp  Distances.cpp  Factories.cpp  FeatureBuilders.cpp  Options.cpp  OutputGenerators.cpp  Preprocessor.cpp  Preprocessors.cpp  RelationSuccinct.cpp  RelationTest.cpp  Relations.cpp  SIMD.cpp  SegmentFilter.cpp  SwarmClustering.cpp  SwarmStorages.cpp  SwarmingSegmentFilter.cpp  Swarms.cpp  Utility.cpp  Verification.cpp  VerificationGotoh.cpp  Worker.cpp
src/modes/: AlignmentFreeMode.cpp  AlignmentScoreMode.cpp  ConsistencyMode.cpp  DereplicationMode.cpp  LevenshteinMode.cpp  PreprocessingOnlyMode.cpp  QualityAlignmentScoreMode.cpp  QualityLevenshteinMode.cpp  SpaceLevenshteinMode.cpp
src/simd-verification/: matrix.cc  search16.cc  search8.cc  ssse3.cc  util.cc
src/space/: Basics.cpp  FlexibleRelations.cpp  NumericArrays.cpp  StringArrays.cpp  SwarmRepresentations.cpp
(+25 files in other folders)
